--- a/index.html
+++ b/index.html
@@ -1,248 +1,261 @@
 <!DOCTYPE html>
+
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Shark Tapper</title>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+<meta content="no-cache, no-store, must-revalidate" http-equiv="Cache-Control"/>
+<meta content="no-cache" http-equiv="Pragma"/>
+<meta content="0" http-equiv="Expires"/>
+<title>Shark Tapper</title>
+<script src="https://telegram.org/js/telegram-web-app.js">
+    function openLeaderboard() {
+      document.getElementById('leaderboard-modal').style.display = 'flex';
+      loadLeaderboard();
+    }
+
+    function closeLeaderboard() {
+      document.getElementById('leaderboard-modal').style.display = 'none';
+    }
+
+    
+    function loadLeaderboard() {
+      fetch(`${dbUrl}/users.json`)
+        .then(response => response.json())
+        .then(data => {
+          const users = Object.entries(data || {}).map(([id, info]) => ({
+            id,
+            balance: info.balance || 0,
+            first_name: info.first_name,
+            username: info.username,
+            photo_url: info.photo_url
+          }));
+          users.sort((a, b) => b.balance - a.balance);
+          const leaderboard = document.getElementById('leaderboardList');
+          leaderboard.innerHTML = '';
+          users.slice(0, 10).forEach(user => {
+            const name = user.first_name || `ID ${user.id.slice(-4)}`;
+            const avatar = user.photo_url ? `<img src="${user.photo_url}" style="width:24px;height:24px;border-radius:50%;margin-right:6px;">` : "";
+            const li = document.createElement('li');
+            li.innerHTML = `${avatar}<strong>${name}</strong>: ${user.balance}`;
+            leaderboard.appendChild(li);
+          });
+        });
+    }
+
+
+</script>
+<style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
     html, body {
-      width: 100%; height: 100%; overflow: hidden;
-      font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #f2f2f7; color: #1c1c1e;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: linear-gradient(160deg, #e8ecef, #cfd8dc);
+      font-family: 'Segoe UI', sans-serif;
       touch-action: manipulation;
-    }
     .loading-screen {
-      position: fixed; width: 100%; height: 100%; background: #fff;
-      z-index: 9999; display: flex; align-items: center; justify-content: center;
-      flex-direction: column;
-    }
-    .loading-screen img { max-width: 70%; }
-    .game-container {
-      display: none;
-      position: relative;
-      width: 100vw; max-width: 420px; height: 100vh;
-      margin: 0 auto;
-      display: flex; flex-direction: column;
-      align-items: center; justify-content: space-between;
-      padding: 24px 16px;
+      position: fixed;
       background: #fff;
-    }
-    .balance { font-size: 24px; font-weight: 600; margin: 12px 0; }
+      z-index: 9999;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    .loading-screen img {
+      max-width: 80%;
+    .loading-screen span {
+      font-size: 20px;
+      margin-top: 12px;
+      color: #333;
+    .game-container {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 90vw;
+      max-width: 400px;
+      height: 90vh;
+      max-height: 700px;
+      background: #ffffff;
+      border: 4px solid #d0d0d0;
+      border-radius: 24px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      justify-content: space-between;
+    .balance {
+      color: #111;
+      font-size: 22px;
+      font-weight: bold;
     .tap-image {
-      max-width: 100%; border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      cursor: pointer; transition: transform 0.1s;
-    }
-    .tap-animation { animation: tapPulse 0.2s ease; }
+      max-width: 100%;
+      cursor: pointer;
+      transition: transform 0.1s;
+      border-radius: 16px;
+    .tap-animation {
+      animation: tapPulse 0.2s ease;
     @keyframes tapPulse {
       0% { transform: scale(1); }
       50% { transform: scale(0.9); }
       100% { transform: scale(1); }
-    }
     .floating-text {
-      position: absolute; font-size: 20px; font-weight: 600;
-      color: #32d74b; pointer-events: none;
+      font-size: 18px;
+      color: #3cba54;
+      font-weight: 700;
       animation: floatUp 1s ease-out forwards;
-    }
+      pointer-events: none;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     @keyframes floatUp {
       0% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(-40px); }
-    }
-    .menu-buttons { display: flex; gap: 12px; flex-wrap: wrap; justify-content: center; margin: 16px 0; }
+      100% { opacity: 0; transform: translateY(-50px); }
+    .menu-buttons {
+      gap: 12px;
     .shop-button {
-      background: #007aff; color: white; border: none;
-      padding: 10px 18px; border-radius: 14px;
-      font-size: 16px; font-weight: 500;
-      box-shadow: 0 2px 6px rgba(0, 122, 255, 0.3);
-      transition: background 0.3s, transform 0.2s;
-    }
-    .shop-button:active { transform: scale(0.96); }
-    .modal {
-      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
-      background: rgba(242, 242, 247, 0.96); display: none;
-      flex-direction: column; align-items: center; justify-content: center;
-      padding: 20px; z-index: 10;
-    }
+      background: #3cba54;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 10px;
+      font-size: 16px;
+    .shop-modal, .booster-modal {
+      top: 0;
+      left: 0;
+      background: rgba(255, 255, 255, 0.95);
+      display: none;
+      z-index: 10;
     .shop-item, .booster-item {
-      background: #fff; padding: 16px; margin: 12px;
-      border-radius: 16px; text-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-    }
-    .shop-item img { width: 100px; border-radius: 16px; margin-bottom: 10px; }
+      margin: 10px;
+      text-align: center;
+    .shop-item img {
+      width: 100px;
+      height: auto;
+      border-radius: 12px;
     .shop-item button, .booster-item button {
-      background: #007aff; color: #fff; border: none;
-      padding: 10px 18px; border-radius: 12px; font-size: 16px;
-      margin-top: 10px; cursor: pointer;
-    }
-  </style>
-</head>
+      margin-top: 5px;
+      padding: 6px 12px;
+      background: #333;
+      border-radius: 6px;
+.tap-image:active {
+  transform: scale(0.88);
+  filter: brightness(0.95);
+  font-size: 24px !important;
+  color: #00c853 !important;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+  background: linear-gradient(135deg, #43e97b, #38f9d7) !important;
+  transition: all 0.2s ease;
+.shop-button:active {
+  transform: scale(0.96);
+  filter: brightness(0.9);
+@keyframes loadProgress {
+  0% { width: 0%; }
+  100% { width: 100%; }
+.spark {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #00ffcc, transparent);
+  opacity: 1;
+  transition: all 0.5s ease-out;
+  .tab-screen { display: none; }
+  .tab-screen.active-tab { display: flex !important; flex-direction: column; }
+  .tab-btn { font-size: 20px; background: none; border: none; cursor: pointer; }
+#bottom-nav {
+  transition: opacity 0.5s ease;
+  opacity: 0;
+  bottom: 0;
+  justify-content: space-around;
+  padding: 10px 0;
+  border-top: 2px solid #ccc;
+  z-index: 999;
+#bottom-nav.show {
+.tab-btn {
+  background: linear-gradient(to right, #4caf50, #81c784);
+  padding: 10px 14px;
+  border-radius: 8px;
+.tab-btn:active {
+  transform: scale(0.95);
+.game-container { padding-bottom: 80px; }</style>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
 <body>
-  <div class="loading-screen" id="loadingScreen">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Emoji_u1f988.svg/2048px-Emoji_u1f988.svg.png" alt="Loading">
-    <span>Загрузка...</span>
-  </div>
+<div class="loading-screen" id="loading">
+<img alt="Loading..." src="w1.png" style="position:absolute; width:100%; height:100%; object-fit:cover; z-index:-1;"/>
+<div style="position:absolute; bottom:80px; width:100%; text-align:center;">
+<div style="font-family: 'Orbitron', sans-serif; font-size: 28px; color: #fff; text-shadow: 2px 2px 8px rgba(0,0,0,0.8); margin-bottom: 16px;">
+          Приключение года 2025
+        </div>
+<div style="width: 80%; height: 14px; background: #1a1a1a; border-radius: 8px; overflow: hidden; margin: 0 auto;">
+<div id="progress-bar" style="
+            width: 0%;
+            height: 100%;
+            background: linear-gradient(90deg, #00ffcc, #0072ff);
+            animation: loadProgress 5s linear forwards;
+            box-shadow: 0 0 12px #00f5ff;
+          "></div>
+</div>
+</div>
+</div>
+<div class="game-container tab-screen active-tab" id="screen-game" style="display:none">
+<div style="text-align:center; margin-bottom:10px;">
+<div style="font-size:18px; font-weight:bold;">Уровень <span id="playerLevel">1</span></div>
+<div style="width:100%; background:#ccc; border-radius:8px; height:10px; margin-top:4px;">
+<div id="xpBar" style="height:10px; width:0%; background:linear-gradient(to right, #00c6ff, #0072ff); border-radius:8px;"></div>
+</div>
+</div>
+<div class="balance" id="tokenCount">0 токенов</div>
+<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src=""/>
+</div>
+<div class="shop-modal tab-screen" id="screen-shop">
+<div class="shop-item">
+<img src="shark.png?v=1"/>
+<button onclick="buySkin('default', 0)">Выбрать</button>
+</div>
+<div class="shop-item">
+<img src="shark_skin2.png?v=1"/>
+<button onclick="buySkin('skin2', 1000)">Выбрать</button>
+</div>
+<div class="shop-item">
+<img src="shark_skin1.png?v=1"/>
+<button onclick="buySkin('skin3', 500)">Выбрать</button>
+</div>
+<button onclick="closeShop()">Скрыть</button>
+</div>
+<div class="booster-modal tab-screen" id="screen-boosters">
+<div class="booster-item">
+<div class="booster-info">Авто-Тап +1 (50 токенов)</div>
+<button onclick="buyBooster(50, 1)">Купить</button>
+</div>
+<div class="booster-item">
+<div class="booster-info">Авто-Тап +2 (100 токенов)</div>
+<button onclick="buyBooster(100, 2)">Купить</button>
+</div>
+<div class="booster-item">
+<div class="booster-info">Авто-Тап +3 (1000 токенов)</div>
+<button onclick="buyBooster(1000, 3)">Купить</button>
+</div>
+<button onclick="closeBoosters()">Скрыть</button>
+</div>
 
-  <div class="game-container" id="gameContainer">
-    <div class="balance"><span id="tokenCount">0</span> токенов</div>
-    <img src="shark.png" alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()">
-    <div class="menu-buttons">
-      <button class="shop-button" onclick="openShop()">🛒 Магазин</button>
-      <button class="shop-button" onclick="openBoosters()">⚡ Бустеры</button>
-      <button class="shop-button" onclick="openLeaderboard()">🏆 Лидерборд</button>
-      <button class="shop-button" onclick="Telegram.WebApp.close()">🚪 Выйти</button>
-    </div>
-  </div>
-
-  <div class="modal" id="shopModal">
-    <div class="shop-item"><img src="shark.png"><br><button onclick="buySkin('default', 0)">Выбрать</button></div>
-    <div class="shop-item"><img src="shark_skin2.png"><br><button onclick="buySkin('skin2', 1000)">Купить / Выбрать</button></div>
-    <div class="shop-item"><img src="shark_skin1.png"><br><button onclick="buySkin('skin3', 500)">Купить / Выбрать</button></div>
-    <button class="shop-button" onclick="closeModals()">Закрыть</button>
-  </div>
-
-  <div class="modal" id="boosterModal">
-    <div class="booster-item"><div class="booster-info">Авто-Тап +1 (50 токенов)</div><button onclick="buyBooster(50, 1)">Купить</button></div>
-    <div class="booster-item"><div class="booster-info">Авто-Тап +2 (100 токенов)</div><button onclick="buyBooster(100, 2)">Купить</button></div>
-    <div class="booster-item"><div class="booster-info">Авто-Тап +3 (1000 токенов)</div><button onclick="buyBooster(1000, 3)">Купить</button></div>
-    <button class="shop-button" onclick="closeModals()">Закрыть</button>
-  </div>
-
-  <div class="modal" id="leaderboardModal">
-    <div id="leaderboardList">Загрузка лидерборда...</div>
-    <button class="shop-button" onclick="closeModals()">Закрыть</button>
-  </div>
-
-  <script>
-    const dbUrl = 'https://tralalero-fec07-default-rtdb.firebaseio.com';
-    let balance = 0, autoTap = 0;
-    let currentSkin = 'default';
-    let ownedSkins = { default: true };
-    let ownedBoosters = { 1: false, 2: false, 3: false };
-    let userId = null;
-
-    const tokenCount = document.getElementById('tokenCount');
-    const tapImage = document.getElementById('tapImage');
-
-    function handleTap() {
-      balance++;
-      tokenCount.textContent = balance;
-      tapImage.classList.add("tap-animation");
-      setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
-
-      const float = document.createElement("div");
-      float.className = "floating-text";
-      float.textContent = "+1";
-      float.style.left = "50%";
-      float.style.top = "40%";
-      document.body.appendChild(float);
-      setTimeout(() => document.body.removeChild(float), 1000);
-
-      saveProgress();
-    }
-
-    function openShop() { closeModals(); document.getElementById('shopModal').style.display = 'flex'; }
-    function openBoosters() { closeModals(); document.getElementById('boosterModal').style.display = 'flex'; }
-    function openLeaderboard() { closeModals(); document.getElementById('leaderboardModal').style.display = 'flex'; loadLeaderboard(); }
-    function closeModals() { document.querySelectorAll('.modal').forEach(m => m.style.display = 'none'); }
-
-    function buySkin(id, price) {
-      if (ownedSkins[id]) { currentSkin = id; } 
-      else if (balance >= price) {
-        balance -= price;
-        ownedSkins[id] = true;
-        currentSkin = id;
-      } else {
-        alert("Недостаточно токенов!"); return;
-      }
-      updateSkin();
-      tokenCount.textContent = balance;
-      saveProgress();
-    }
-
-    function updateSkin() {
-      const skinPaths = {
-        default: 'shark.png', skin2: 'shark_skin2.png', skin3: 'shark_skin1.png'
-      };
-      tapImage.src = skinPaths[currentSkin] || skinPaths.default;
-    }
-
-    function buyBooster(price, inc) {
-      if (balance >= price && !ownedBoosters[inc]) {
-        balance -= price;
-        autoTap += inc;
-        ownedBoosters[inc] = true;
-        tokenCount.textContent = balance;
-        saveProgress();
-      } else {
-        alert("Недостаточно токенов или уже куплено!");
-      }
-    }
-
-    function startAutoTap() {
-      setInterval(() => {
-        if (autoTap > 0) {
-          balance += autoTap;
-          tokenCount.textContent = balance;
-          saveProgress();
-        }
-      }, 1000);
-    }
-
-    function loadLeaderboard() {
-      fetch(`${dbUrl}/users.json`).then(r => r.json()).then(data => {
-        let list = Object.entries(data || {}).map(([id, d]) => ({ id, balance: d.balance || 0 }))
-          .sort((a,b) => b.balance - a.balance).slice(0, 10);
-        document.getElementById('leaderboardList').innerHTML = list.map(u => `Игрок ${u.id.slice(-4)}: ${u.balance}`).join('<br>');
-      });
-    }
-
-    function saveProgress() {
-      if (!userId) return;
-      fetch(`${dbUrl}/users/${userId}.json`, {
-        method: 'PUT', headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ balance, currentSkin, ownedSkins, autoTap, ownedBoosters })
-      });
-    }
-
-    function loadProgress() {
-      if (!userId) return;
-      fetch(`${dbUrl}/users/${userId}.json`).then(r => r.json()).then(d => {
-        if (d) {
-          balance = d.balance || 0;
-          currentSkin = d.currentSkin || 'default';
-          ownedSkins = d.ownedSkins || { default: true };
-          autoTap = d.autoTap || 0;
-          ownedBoosters = d.ownedBoosters || {};
-          updateSkin();
-          tokenCount.textContent = balance;
-        }
-      });
-    }
-
-    window.addEventListener('DOMContentLoaded', () => {
-      setTimeout(() => {
-        document.getElementById('loadingScreen').style.display = 'none';
-        document.getElementById('gameContainer').style.display = 'flex';
-      }, 1000);
-
-      if (Telegram?.WebApp) {
-        Telegram.WebApp.ready();
-        Telegram.WebApp.expand();
-        userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
-        if (userId) {
-          loadProgress();
-          startAutoTap();
-        } else {
-          alert("Не удалось получить userId из Telegram Web App.");
-        }
-      }
-    });
-  </script>
+<div class="booster-modal" id="leaderboard-modal">
+<h2>Топ игроков</h2>
+<ul id="leaderboardList"></ul>
+<button onclick="closeLeaderboard()">Скрыть</button>
+</div>
+<div id="bottom-nav" style="position:fixed;bottom:0;width:100%;display:flex;justify-content:space-around;padding:10px;background:#fff;z-index:10001;box-shadow:0 -2px 10px rgba(0,0,0,0.1);; display: none;">
+<button class="tab-btn" onclick="switchTab('screen-game')">🦈</button>
+<button class="tab-btn" onclick="switchTab('screen-shop')">🛒</button>
+<button class="tab-btn" onclick="switchTab('screen-boosters')">⚡</button>
+<button class="tab-btn" onclick="switchTab('screen-leaderboard')">🏆</button>
+<button class="tab-btn" onclick="switchTab('screen-quests')">📜</button><button class="tab-btn" onclick="Telegram.WebApp.close()">❌</button></div>
+<div class="tab-screen" id="screen-quests" style="display:none; flex-direction:column; align-items:center; justify-content:center; padding:20px;">
+<h2>📜 Задания</h2>
+<div style="margin-top:10px;">
+<p>👥 Пригласи друга и получи 🎁</p>
+<button class="shop-button" onclick="shareGame()">Пригласить через Telegram</button>
+</div>
+</div>
 </body>
 </html>
