--- a/index.html
+++ b/index.html
@@ -4,211 +4,54 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
-<meta content="no-cache, no-store, must-revalidate" http-equiv="Cache-Control"/>
-<meta content="no-cache" http-equiv="Pragma"/>
-<meta content="0" http-equiv="Expires"/>
-<title>Shark Tapper</title>
-<script src="https://telegram.org/js/telegram-web-app.js">
-    function openLeaderboard() {
-      document.getElementById('leaderboard-modal').style.display = 'flex';
-      loadLeaderboard();
-    }
-
-    function closeLeaderboard() {
-      document.getElementById('leaderboard-modal').style.display = 'none';
-    }
-
-    
-    function loadLeaderboard() {
-      fetch(`${dbUrl}/users.json`)
-        .then(response => response.json())
-        .then(data => {
-          const users = Object.entries(data || {}).map(([id, info]) => ({
-            id,
-            balance: info.balance || 0,
-            first_name: info.first_name,
-            username: info.username,
-            photo_url: info.photo_url
-          }));
-          users.sort((a, b) => b.balance - a.balance);
-          const leaderboard = document.getElementById('leaderboardList');
-          leaderboard.innerHTML = '';
-          users.slice(0, 10).forEach(user => {
-            const name = user.first_name || `ID ${user.id.slice(-4)}`;
-            const avatar = user.photo_url ? `<img src="${user.photo_url}" style="width:24px;height:24px;border-radius:50%;margin-right:6px;">` : "";
-            const li = document.createElement('li');
-            li.innerHTML = `${avatar}<strong>${name}</strong>: ${user.balance}`;
-            leaderboard.appendChild(li);
-          });
-        });
-    }
-
-
-</script>
+<link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
 <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    html, body {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: linear-gradient(160deg, #e8ecef, #cfd8dc);
-      font-family: 'Segoe UI', sans-serif;
-      touch-action: manipulation;
-    .loading-screen {
-      position: fixed;
-      background: #fff;
-      z-index: 9999;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    .loading-screen img {
-      max-width: 80%;
-    .loading-screen span {
-      font-size: 20px;
-      margin-top: 12px;
-      color: #333;
-    .game-container {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      width: 90vw;
-      max-width: 400px;
-      height: 90vh;
-      max-height: 700px;
-      background: #ffffff;
-      border: 4px solid #d0d0d0;
-      border-radius: 24px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      justify-content: space-between;
-    .balance {
-      color: #111;
-      font-size: 22px;
-      font-weight: bold;
-    .tap-image {
-      max-width: 100%;
-      cursor: pointer;
-      transition: transform 0.1s;
-      border-radius: 16px;
-    .tap-animation {
-      animation: tapPulse 0.2s ease;
-    @keyframes tapPulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(0.9); }
-      100% { transform: scale(1); }
-    .floating-text {
-      font-size: 18px;
-      color: #3cba54;
-      font-weight: 700;
-      animation: floatUp 1s ease-out forwards;
-      pointer-events: none;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    @keyframes floatUp {
-      0% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(-50px); }
-    .menu-buttons {
-      gap: 12px;
-    .shop-button {
-      background: #3cba54;
-      color: white;
-      border: none;
-      padding: 10px 16px;
-      border-radius: 10px;
-      font-size: 16px;
-    .shop-modal, .booster-modal {
-      top: 0;
-      left: 0;
-      background: rgba(255, 255, 255, 0.95);
-      display: none;
-      z-index: 10;
-    .shop-item, .booster-item {
-      margin: 10px;
-      text-align: center;
-    .shop-item img {
-      width: 100px;
-      height: auto;
-      border-radius: 12px;
-    .shop-item button, .booster-item button {
-      margin-top: 5px;
-      padding: 6px 12px;
-      background: #333;
-      border-radius: 6px;
-.tap-image:active {
-  transform: scale(0.88);
-  filter: brightness(0.95);
-  font-size: 24px !important;
-  color: #00c853 !important;
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
-  background: linear-gradient(135deg, #43e97b, #38f9d7) !important;
-  transition: all 0.2s ease;
-.shop-button:active {
-  transform: scale(0.96);
-  filter: brightness(0.9);
-@keyframes loadProgress {
-  0% { width: 0%; }
-  100% { width: 100%; }
-.spark {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: radial-gradient(circle, #00ffcc, transparent);
-  opacity: 1;
-  transition: all 0.5s ease-out;
-  .tab-screen { display: none; }
-  .tab-screen.active-tab { display: flex !important; flex-direction: column; }
-  .tab-btn { font-size: 20px; background: none; border: none; cursor: pointer; }
-#bottom-nav {
-  transition: opacity 0.5s ease;
-  opacity: 0;
-  bottom: 0;
-  justify-content: space-around;
-  padding: 10px 0;
-  border-top: 2px solid #ccc;
-  z-index: 999;
-#bottom-nav.show {
-.tab-btn {
-  background: linear-gradient(to right, #4caf50, #81c784);
-  padding: 10px 14px;
-  border-radius: 8px;
-.tab-btn:active {
-  transform: scale(0.95);
-.game-container { padding-bottom: 80px; }</style>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/></head>
-<body>
+      html, body {
+        margin: 0;
+        padding: 0;
+        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
+        background: #f2f2f7;
+        color: #1c1c1e;
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+        touch-action: manipulation;
+      }
+      .game-container, #gameContainer {
+        max-width: 420px;
+        margin: 0 auto;
+        padding: 100px 20px 60px;
+        background: white;
+        border-radius: 28px;
+        box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+        position: relative;
+        box-sizing: border-box;
+      }
+      .menu-buttons, .bottom-menu, .shop-button {
+        font-weight: 600;
+        font-size: 16px;
+        border-radius: 16px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      }
+    </style>
+<title>Shark Tapper</title>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+</head>
+<body><div class="wrapper">
 <div class="loading-screen" id="loading">
-<img alt="Loading..." src="w1.png" style="position:absolute; width:100%; height:100%; object-fit:cover; z-index:-1;"/>
-<div style="position:absolute; bottom:80px; width:100%; text-align:center;">
-<div style="font-family: 'Orbitron', sans-serif; font-size: 28px; color: #fff; text-shadow: 2px 2px 8px rgba(0,0,0,0.8); margin-bottom: 16px;">
-          Приключение года 2025
-        </div>
-<div style="width: 80%; height: 14px; background: #1a1a1a; border-radius: 8px; overflow: hidden; margin: 0 auto;">
-<div id="progress-bar" style="
-            width: 0%;
-            height: 100%;
-            background: linear-gradient(90deg, #00ffcc, #0072ff);
-            animation: loadProgress 5s linear forwards;
-            box-shadow: 0 0 12px #00f5ff;
-          "></div>
+<img alt="Loading..." src="w1.png"/>
+<span>Приключение 2025</span>
 </div>
-</div>
-</div>
-<div class="game-container tab-screen active-tab" id="screen-game" style="display:none">
-<div style="text-align:center; margin-bottom:10px;">
-<div style="font-size:18px; font-weight:bold;">Уровень <span id="playerLevel">1</span></div>
-<div style="width:100%; background:#ccc; border-radius:8px; height:10px; margin-top:4px;">
-<div id="xpBar" style="height:10px; width:0%; background:linear-gradient(to right, #00c6ff, #0072ff); border-radius:8px;"></div>
-</div>
-</div>
+<div class="game-container" id="gameContainer" style="display:none">
 <div class="balance" id="tokenCount">0 токенов</div>
-<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src=""/>
+<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="shark.png?v=1"/>
+<div class="menu-buttons">
+<button class="shop-button" onclick="openShop()">Магазин</button>
+<button class="shop-button" onclick="openBoosters()">Бустеры</button>
 </div>
-<div class="shop-modal tab-screen" id="screen-shop">
+<button class="shop-button" id="endButton" onclick="Telegram.WebApp.close()" style="display: none;">Завершить</button>
+</div>
+<div class="shop-modal" id="shop-modal">
 <div class="shop-item">
 <img src="shark.png?v=1"/>
 <button onclick="buySkin('default', 0)">Выбрать</button>
@@ -223,7 +66,7 @@
 </div>
 <button onclick="closeShop()">Скрыть</button>
 </div>
-<div class="booster-modal tab-screen" id="screen-boosters">
+<div class="booster-modal" id="booster-modal">
 <div class="booster-item">
 <div class="booster-info">Авто-Тап +1 (50 токенов)</div>
 <button onclick="buyBooster(50, 1)">Купить</button>
@@ -239,23 +82,31 @@
 <button onclick="closeBoosters()">Скрыть</button>
 </div>
 
-<div class="booster-modal" id="leaderboard-modal">
-<h2>Топ игроков</h2>
-<ul id="leaderboardList"></ul>
-<button onclick="closeLeaderboard()">Скрыть</button>
-</div>
-<div id="bottom-nav" style="position:fixed;bottom:0;width:100%;display:flex;justify-content:space-around;padding:10px;background:#fff;z-index:10001;box-shadow:0 -2px 10px rgba(0,0,0,0.1);; display: none;">
-<button class="tab-btn" onclick="switchTab('screen-game')">🦈</button>
-<button class="tab-btn" onclick="switchTab('screen-shop')">🛒</button>
-<button class="tab-btn" onclick="switchTab('screen-boosters')">⚡</button>
-<button class="tab-btn" onclick="switchTab('screen-leaderboard')">🏆</button>
-<button class="tab-btn" onclick="switchTab('screen-quests')">📜</button><button class="tab-btn" onclick="Telegram.WebApp.close()">❌</button></div>
-<div class="tab-screen" id="screen-quests" style="display:none; flex-direction:column; align-items:center; justify-content:center; padding:20px;">
-<h2>📜 Задания</h2>
-<div style="margin-top:10px;">
-<p>👥 Пригласи друга и получи 🎁</p>
-<button class="shop-button" onclick="shareGame()">Пригласить через Telegram</button>
-</div>
-</div>
-</body>
+</div><script>
+document.addEventListener('DOMContentLoaded', function () {
+  const loading = document.getElementById('loading');
+  const game = document.getElementById('gameContainer');
+  const endBtn = document.getElementById('endButton');
+  
+  setTimeout(() => {
+    if (loading) loading.style.display = 'none';
+    if (game) game.style.display = 'flex';
+    if (endBtn) endBtn.style.display = 'inline-block';
+  }, 2000);
+
+  if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+    Telegram.WebApp.ready();
+    Telegram.WebApp.expand();
+
+    const userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
+    if (userId) {
+      window.userId = userId;
+      if (typeof loadProgress === 'function') loadProgress();
+      if (typeof startAutoTap === 'function') startAutoTap();
+    } else {
+      alert("Не удалось получить userId из Telegram Web App.");
+    }
+  }
+});
+</script></body>
 </html>
