--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
+
 <html lang="ru">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-  <meta http-equiv="Pragma" content="no-cache"/>
-  <meta http-equiv="Expires" content="0"/>
-  <title>Shark Tapper</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+<meta content="no-cache, no-store, must-revalidate" http-equiv="Cache-Control"/>
+<meta content="no-cache" http-equiv="Pragma"/>
+<meta content="0" http-equiv="Expires"/>
+<title>Shark Tapper</title>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/>
+<style>
     html, body {
       margin: 0;
       padding: 0;
@@ -108,78 +109,72 @@
   </style>
 </head>
 <body>
-
 <div class="loading-screen" id="loading">
-  <img alt="Loading..." src="w1.png"/>
-  <div style="position:absolute; bottom:80px; width:100%; text-align:center;">
-    <div style="font-family: 'Orbitron', sans-serif; font-size: 28px; color: #fff; text-shadow: 2px 2px 8px rgba(0,0,0,0.8); margin-bottom: 16px;">
+<img alt="Loading..." src="w1.png"/>
+<div style="position:absolute; bottom:80px; width:100%; text-align:center;">
+<div style="font-family: 'Orbitron', sans-serif; font-size: 28px; color: #fff; text-shadow: 2px 2px 8px rgba(0,0,0,0.8); margin-bottom: 16px;">
       Приключение года 2025
     </div>
-    <div style="width: 80%; height: 14px; background: #1a1a1a; border-radius: 8px; overflow: hidden; margin: 0 auto;">
-      <div id="progress-bar" style="
+<div style="width: 80%; height: 14px; background: #1a1a1a; border-radius: 8px; overflow: hidden; margin: 0 auto;">
+<div id="progress-bar" style="
         width: 0%;
         height: 100%;
         background: linear-gradient(90deg, #00ffcc, #0072ff);
         animation: loadProgress 5s linear forwards;
         box-shadow: 0 0 12px #00f5ff;">
-      </div>
-    </div>
-  </div>
 </div>
-
+</div>
+</div>
+</div>
+&lt;!-- 🦈 GPT: Start of game container with shark tap button --&gt;
 <div class="game-container" id="gameContainer">
-  <div class="balance" id="tokenCount">0 токенов</div>
-  <img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="shark.png?v=1"/>
-  <div class="menu-buttons">
-    <button class="shop-button" onclick="openShop()">🛒 Магазин</button>
-    <button class="shop-button" onclick="openBoosters()">🚀 Бустеры</button>
-    <button class="shop-button" onclick="openLeaderboard()">🏆 Лидерборд</button>
-    <button class="shop-button" onclick="Telegram.WebApp.close()">❌ Выйти</button>
-  </div>
-</div>
+<div class="balance" id="tokenCount">0 токенов</div>
 
+<button id="tapButton" onclick="handleTap()" style="background:none;border:none;padding:0;margin:0;cursor:pointer;"><img alt="Shark Tap" class="tap-image" id="tapImage" onclick="handleTap()" src="shark.png?v=1" style="width:180px;height:180px;border-radius:50%;border:6px solid white;object-fit:cover;"/></button><div class="menu-buttons">
+<button class="shop-button" onclick="openShop()">🛒 Магазин</button>
+<button class="shop-button" onclick="openBoosters()">🚀 Бустеры</button>
+<button class="shop-button" onclick="openLeaderboard()">🏆 Лидерборд</button>
+<button class="shop-button" onclick="Telegram.WebApp.close()">❌ Выйти</button>
+</div>
+</div>
+&lt;!-- 🦈 GPT: End of game container --&gt;
 <!-- Вставим модальные окна магазина и бустеров + лидерборд позже -->
 <!-- Скрипты будут также добавлены на следующем шаге -->
-
-
 <div class="shop-modal" id="shop-modal" style="display:none;">
-  <div class="shop-item">
-    <img src="shark.png?v=1"/>
-    <button onclick="buySkin('default', 0)">Выбрать</button>
-  </div>
-  <div class="shop-item">
-    <img src="shark_skin2.png?v=1"/>
-    <button onclick="buySkin('skin2', 1000)">Купить / Выбрать</button>
-  </div>
-  <div class="shop-item">
-    <img src="shark_skin1.png?v=1"/>
-    <button onclick="buySkin('skin3', 500)">Купить / Выбрать</button>
-  </div>
-  <button onclick="closeShop()">Закрыть</button>
+<div class="shop-item">
+<img src="shark.png?v=1"/>
+<button onclick="buySkin('default', 0)">Выбрать</button>
 </div>
-
+<div class="shop-item">
+<img src="shark_skin2.png?v=1"/>
+<button onclick="buySkin('skin2', 1000)">Купить / Выбрать</button>
+</div>
+<div class="shop-item">
+<img src="shark_skin1.png?v=1"/>
+<button onclick="buySkin('skin3', 500)">Купить / Выбрать</button>
+</div>
+<button onclick="closeShop()">Закрыть</button>
+</div>
 <div class="booster-modal" id="booster-modal" style="display:none;">
-  <div class="booster-item">
-    <div class="booster-info">Авто-Тап +1 (50 токенов)</div>
-    <button onclick="buyBooster(50, 1)">Купить</button>
-  </div>
-  <div class="booster-item">
-    <div class="booster-info">Авто-Тап +2 (100 токенов)</div>
-    <button onclick="buyBooster(100, 2)">Купить</button>
-  </div>
-  <div class="booster-item">
-    <div class="booster-info">Авто-Тап +3 (1000 токенов)</div>
-    <button onclick="buyBooster(1000, 3)">Купить</button>
-  </div>
-  <button onclick="closeBoosters()">Закрыть</button>
+<div class="booster-item">
+<div class="booster-info">Авто-Тап +1 (50 токенов)</div>
+<button onclick="buyBooster(50, 1)">Купить</button>
 </div>
-
+<div class="booster-item">
+<div class="booster-info">Авто-Тап +2 (100 токенов)</div>
+<button onclick="buyBooster(100, 2)">Купить</button>
+</div>
+<div class="booster-item">
+<div class="booster-info">Авто-Тап +3 (1000 токенов)</div>
+<button onclick="buyBooster(1000, 3)">Купить</button>
+</div>
+<button onclick="closeBoosters()">Закрыть</button>
+</div>
 <div class="booster-modal" id="leaderboard-modal" style="display:none;">
-  <h2>Топ игроков</h2>
-  <ul id="leaderboardList"></ul>
-  <button onclick="closeLeaderboard()">Закрыть</button>
+<h2>Топ игроков</h2>
+<ul id="leaderboardList"></ul>
+<button onclick="closeLeaderboard()">Закрыть</button>
 </div>
-
 <script>
 const dbUrl = 'https://tralalero-fec07-default-rtdb.firebaseio.com';
 let currentSkin = 'default';
@@ -237,15 +232,6 @@ function loadProgress() {
     });
 }
 
-function handleTap() {
-  balance++;
-  if (navigator.vibrate) navigator.vibrate(30);
-  tokenCount.textContent = `${balance} токенов`;
-  showFloatingText("+1");
-  tapImage.classList.add("tap-animation");
-  setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
-  saveProgress();
-}
 
 function showFloatingText(text) {
   const float = document.createElement("div");
@@ -368,7 +354,18 @@ window.addEventListener('DOMContentLoaded', () => {
     }
   }
 });
-</script>
-
+function handleTap() {
+  balance++;
+  if (navigator.vibrate) {
+    navigator.vibrate(30);
+  } else if (Telegram.WebApp.HapticFeedback) {
+    Telegram.WebApp.HapticFeedback.impactOccurred("light");
+  }
+  tokenCount.textContent = `${balance} токенов`;
+  showFloatingText("+1");
+  tapImage.classList.add("tap-animation");
+  setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
+  saveProgress();
+}</script>
 </body>
 </html>
